--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ Header Css Start
 		height: 100%;
 		top:0;
 		overflow-y: auto;
-		background-color: #222222;
+		background-color: var(--primary-color);
 		z-index: 1000;
 		padding: 15px 0;
 		transition: all 0.5s ease;
@@ -458,6 +458,140 @@ Hero Css Start
 Hero Css End
 ============================
 */
+
+/*
+============================
+Service Box Css Start
+============================
+*/
+.service-box {
+	padding: 30px 36px;
+	border-style: solid;
+	border-color: #001145;
+	text-align: center;
+	border-radius: 12px;
+	background-color: var(--white-color);
+	box-shadow: 0px 0px 10px 2px #00000033;
+  }
+.service-box.service-box-1 {
+	border-width: 0px 2px 2px 0px;
+}
+.service-box.service-box-2 {
+	border-width: 2px 0px 0px 2px;
+}
+.service-box.service-box-3 {
+    border-width: 0px 0px 2px 2px;
+}
+.service-box h3 {
+	font-size: 30px;
+	font-weight: 600;
+	line-height: 48px;
+	color: var(--primary-color);
+	margin-top: 18px;
+  }
+  @media only screen and (max-width:991px) {
+	.service-box h3 {
+		font-size: 22px;
+		line-height: 42px;
+	}
+  } 
+  @media only screen and (max-width:767px) {
+	.service-box {
+		margin-bottom: 25px;
+	}
+	.service-box.service-box-3 {
+		margin-bottom: 0;
+	}
+  } 
+/*
+============================
+Service Box Css End
+============================
+*/
+
+/*
+===============================
+Trackmaster Slides Css Start
+===============================
+*/
+.trackmaster-slides-bg {
+	padding-top: 262px; 
+	padding-bottom: 382px;
+	text-align: center;
+	background-size: cover;
+	background-position: center;
+	position: relative;
+  }
+  .trackmaster-content {
+	color: var(--white-color);
+  }
+  .trackmaster-content h1 {
+	font-size: 80px;
+	line-height: 78px;
+	margin-bottom: 30px;
+  }
+  .trackmaster-content span {
+	font-size: 36px;
+	font-weight: 500;
+	line-height: 48px;
+  }
+
+.trackmaster-slides-active .slick-dots {
+	position: absolute;
+	left: 50%;
+	bottom: 80px;
+	transform: translateX(-50%);
+  }
+.trackmaster-slides-active .slick-dots li {
+	width: 29px;
+	height: 6px;
+	border-radius: 40px;
+	margin: 0 10px;
+	outline: none;
+	cursor: pointer;
+	display: inline-block;
+	background: #FFFFFF99;
+  }
+  .trackmaster-slides-active .slick-dots li button {
+	display: none;
+  }
+  .trackmaster-slides-active .slick-dots li.slick-active {
+	background-color: var(--white-color);
+  }
+  @media only screen and (max-width:991px) {
+	.trackmaster-slides-bg {
+		padding-top: 180px;
+		padding-bottom: 310px;
+	}
+	.trackmaster-content h1 {
+		font-size: 60px;
+		line-height: 70px;
+		margin-bottom: 20px;
+	}
+	.trackmaster-content span {
+		font-size: 30px;
+	}
+  }
+  @media only screen and (max-width:767px) {
+	.trackmaster-slides-bg {
+		padding-top: 120px;
+		padding-bottom: 180px;
+	}
+	.trackmaster-content h1 {
+		font-size: 40px;
+		line-height: 70px;
+		margin-bottom: 0;
+	}
+	.trackmaster-content span {
+		font-size: 20px;
+	}
+  }
+/*
+===============================
+Trackmaster Slides Css End
+===============================
+*/
+
 
 /*
 ============================
