--- a/style.css
+++ b/style.css
@@ -592,6 +592,226 @@ Trackmaster Slides Css End
 ===============================
 */
 
+/*
+===============================
+Kingdom Css Start
+===============================
+*/
+.kingdom-wide-section {
+	background: #0011450D;
+  }
+.section-title h2 {
+	color: var(--primary-color);
+	font-size: 48px;
+	line-height: 62px;
+	margin-bottom: 0;
+	font-weight: 600;
+  }
+  .section-title p {
+	color: #00000099;
+	font-size: 18px;
+	line-height: 27px;
+	font-weight: 400;
+  }
+  .kingdom-map-wrap {
+	margin-top: 73px;
+  }
+/*
+===============================
+Kingdom Css End
+===============================
+*/
+
+/*
+===============================
+Features Css Start
+===============================
+*/
+.features-section {
+	background: #0033CE0D;
+}
+  .features-box-wrap {
+	margin-top: 87px;
+	position: relative;
+  }
+  .features-content {
+	position: absolute;
+	bottom: 22px;
+	z-index: 9;
+	left: 32px;
+  }
+  .features-content h5 {
+	color: var(--white-color);
+	font-size: 16px;
+	line-height: 19px;
+	position: relative;
+	font-weight: 700;
+	margin-bottom: 8px;
+  }
+  .features-content h5:after {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: -4px;
+	width: 100%;
+	border: 1px solid #FFFFFF;
+  }
+  .read-more-btn {
+	color: var(--white-color);
+	font-size: 14px;
+	display: inline-block;
+	font-weight: 500;
+	transition: 0.3s all ease;
+  }
+  .read-more-btn:hover {
+	color: var(--white-color);
+  }
+  .read-more-btn i {
+	padding-left: 12px;
+  }
+.features-btn {
+	margin-top: 56px;
+  }
+  .features-btn a {
+	padding: 13px 30px;
+  }
+  @media only screen and (max-width:991px) {
+	.features-box-wrap {
+		margin-top: 60px;
+	}
+	.section-title h2 {
+		font-size: 40px;
+		line-height: 58px;
+	}
+	.section-title p {
+		font-size: 16px;
+		line-height: 25px;
+	}
+  }
+  @media only screen and (max-width:767px) {
+	.section-title h2 {
+		font-size: 30px;
+		line-height: 35px;
+		margin-bottom: 10px;
+	}
+	.section-title p {
+		font-size: 15px;
+		line-height: 22px;
+	}
+	.features-box-wrap {
+		margin-top: 40px;
+	}
+	.feature-img img {
+		width: 100%;
+	}
+	.features-btn {
+		margin-top: 45px;
+	}
+  }
+/*
+===============================
+Features Css End
+===============================
+*/
+
+/*
+===============================
+About Us Css Start
+===============================
+*/
+.about-us-section {
+	padding: 270px 0;
+	background: #00AF901A;
+}
+.about_title p {
+	color: #9A9A9A;
+	font-size: 26px;
+	line-height: 32px;
+	font-weight: 500;
+	margin-top: 20px;
+  }
+.sec_subtitle {
+	color: #C7C7C7;
+	font-size: 24px;
+	font-weight: 700;
+	position: relative;
+	max-width: 205px;
+	margin-left: auto;
+	margin-right: auto;
+  }
+  .sec_subtitle:before {
+	content: "";
+	position: absolute;
+	width: 11px;
+	height: 14px;
+	top: 50%;
+	left: 14px;
+	transform: translateY(-50%);
+	border-top: 8px solid transparent;
+	border-bottom: 8px solid transparent;
+	border-left: 10px solid var(--primary-color);
+  }
+  .sec_subtitle:after {
+	content: "";
+	position: absolute;
+	width: 11px;
+	height: 14px;
+	top: 50%;
+	right: 14px;
+	transform: translateY(-50%);
+	border-top: 8px solid transparent;
+	border-bottom: 8px solid transparent;
+	border-right: 10px solid var(--primary-color);
+  }
+  @media only screen and (max-width:991px) {
+	.about-us-section {
+		padding: 150px 0;
+	}
+	.sec_subtitle {
+		font-size: 22px;
+		max-width: 190px;
+	}
+	.about_title p {
+		font-size: 22px;
+		line-height: 30px;
+		margin-top: 15px;
+	}
+  }
+  @media only screen and (max-width:767px) {
+	.about-us-section {
+		padding: 100px 0;
+	}
+	.sec_subtitle {
+		font-size: 18px;
+		max-width: 180px;
+		margin-bottom: 20px;
+	}
+	.about_title p {
+		font-size: 18px;
+		line-height: 28px;
+		margin-top: 12px;
+	}
+	.about_title p br {
+		display: none;
+	}
+	.sec_subtitle::before {
+		width: 10px;
+		height: 12px;
+		left: 24px;
+	}
+	.sec_subtitle::after {
+		width: 10px;
+		height: 12px;
+		right: 24px;
+	}
+  }
+/*
+===============================
+About Us Css End
+===============================
+*/
+
+
 
 /*
 ============================
