--- a/style.css
+++ b/style.css
@@ -1020,9 +1020,86 @@ Your Interest Css End
 ===============================
 */
 
-
-
-
+/*
+===============================
+Asked Question Css Start
+===============================
+*/
+.asked-question-section {
+	background-color: #00AF901A;
+}
+.accordion {
+	max-width: 1070px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 56px;
+}
+.accordion-box {
+	margin-bottom: 12px;
+}
+.accordion-title {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	cursor: pointer;
+	background-color: var(--white-color);
+	box-shadow: 0px 1px 2px 0px #00000033;
+	padding: 14px 15px;
+	margin-bottom: 2px;
+}
+.accordion-title h5 {
+	color: #818181;
+	font-size: 18px;
+	line-height: 22px;
+	font-weight: 700;
+  }
+.accordion-title span {
+  transition: 0.4s all ease;
+}
+.accordion-title span i {
+  color: #FF6F00B2;
+  font-size: 30px;
+  font-weight: 300;
+}
+.accordion-title.active span {
+  transform: rotateZ(-180deg);
+}
+.accordion-content {
+	background-color: #FDFDFD;
+	box-shadow: 0px 1px 2px 0px #00000033;
+	padding: 24px;
+	text-align: left;
+	display: none;
+}
+.accordion-content p {
+  color: #848484;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+} 
+@media only screen and (max-width:991px) {
+	.accordion-content p {
+		font-size: 16px;
+	}
+}
+@media only screen and (max-width:767px) {
+	.accordion-title h5 {
+		font-size: 16px;
+		line-height: 20px;
+		text-align: left;
+	}
+	.accordion-title span i {
+		font-size: 24px;
+	}
+	.accordion-content p {
+		font-size: 15px;
+	}
+}
+/*
+===============================
+Asked Question Css End
+===============================
+*/
 
 
 
