--- a/style.css
+++ b/style.css
@@ -698,6 +698,9 @@ Features Css Start
 		font-size: 15px;
 		line-height: 22px;
 	}
+	.section-title p br {
+		display: none;
+	}
 	.features-box-wrap {
 		margin-top: 40px;
 	}
@@ -948,7 +951,7 @@ Your Interest Css Start
 .field-submit {
 	margin-top: 50px;
 }
-.field button {
+.submit-btn {
   color: var(--white-color);
   outline: none;
   border: 0;
@@ -961,7 +964,7 @@ Your Interest Css Start
   font-family: "Montserrat", sans-serif;
   transition: 0.3s all ease;
 }
-.field button:hover {
+.submit-btn:hover {
 	color: var(--primary-color);
 	background-color: var(--white-color);
 }
@@ -1005,10 +1008,13 @@ Your Interest Css Start
 	.field-submit {
 		margin-top: 30px;
 	}
-	.field button {
+	.field input, .field textarea {
+		padding-left: 12px;
+	}
+	.submit-btn {
 		height: 55px;
 		width: 300px;
-		font-size: 18px;
+		font-size: 16px;
 	}
 	.field.field-submit span {
 		font-size: 16px;
@@ -1101,8 +1107,153 @@ Asked Question Css End
 ===============================
 */
 
-
-
+/*
+===============================
+Get In Touch Css Start
+===============================
+*/
+.get-in-touch-section {
+	background-color: #001145E5;
+}
+.get-in-touch-content .section-title h2 {
+	color: var(--white-color);
+	margin-bottom: 20px;
+  }
+.get-in-touch-content .section-title p {
+	color: var(--white-color);
+	font-size: 24px;
+	font-weight: 500;
+	margin-top: 43px;
+	font-family: "Montserrat", sans-serif;
+}
+.get-in-touch-content .get-in-info a {
+	display: block;
+	color: var(--white-color);
+	font-size: 24px;
+	margin: 20px 0;
+	font-weight: 500;
+	font-family: "Montserrat", sans-serif;
+}
+.get_field label:after {
+	content: "*";
+	color: #FF9500;
+	font-size: 20px;
+  }
+  .get_field input, .get_field select {
+	background-color: var(--white-color);
+	border: 0;
+	height: 50px;
+	width: 100%;
+	border-radius: 6px;
+	font-size: 16px;
+	color: #002B5B;
+	padding-left: 15px;
+	font-weight: 600;
+	font-family: "Montserrat", sans-serif;
+  }
+  .form-country-select {
+	position: relative;
+  }
+  .form-country-select select {
+	  appearance: none;
+	  -webkit-appearance: none;
+	  cursor: pointer;
+  }
+  .form-country-select::before {
+	content: "\f107";
+	position: absolute;
+	right: 12px;
+	top: 50%;
+	transform: translateY(-50%);
+	font-family: 'Font Awesome 6 pro';
+	font-size: 14px;
+	color: var(--primary-color);
+}
+.field_checkbox {
+	margin-top: 30px;
+  }
+  .field_checkbox label {
+	cursor: pointer;
+	font-size: 16px;
+	font-weight: 500;
+	color: var(--white-color);
+	font-family: "Montserrat", sans-serif;
+}
+  .field_checkbox input[type="checkbox"] {
+	display: none;
+  }
+  .field_checkbox .checkmark {
+	width: 14px;
+	height: 14px;
+	border-radius: 2px;
+	position: relative;
+	margin-right: 20px;
+	transition: background-color 0.3s;
+	background-color: var(--white-color);
+	float: left;
+	margin-top: 8px;
+}
+  .field_checkbox .checkmark::after {
+	content: '';
+	position: absolute;
+	left: 5px;
+	top: 1px;
+	width: 4px;
+	height: 9px;
+	border: solid white;
+	border-top-width: medium;
+	border-right-width: medium;
+	border-bottom-width: medium;
+	border-left-width: medium;
+	border-width: 0 2px 2px 0;
+	transform: rotate(45deg);
+	transition: opacity 0.3s;
+}
+.field_checkbox input[type="checkbox"]:checked + .checkmark {
+	background-color: #007BFF;
+	border-color: #007BFF;
+}
+.field_checkbox label p {
+	overflow: hidden;
+}
+@media only screen and (max-width:991px) {
+	.get-in-touch-content .section-title p {
+		font-size: 20px;
+		margin-top: 28px;
+	}
+	.get-in-touch-content .get-in-info a {
+		font-size: 20px;
+		margin: 10px 0;
+	}
+	.field_checkbox .checkmark {
+		margin-right: 15px;
+	}
+}
+@media only screen and (max-width:767px) {
+	.get-in-touch-content .section-title p {
+		font-size: 18px;
+		margin-top: 25px;
+	}
+	.get-in-touch-content .get-in-info a {
+		font-size: 18px;
+		margin: 10px 0;
+	}
+	.field_checkbox .checkmark {
+		margin-top: 6px;
+	}
+	.get_field input, .get_field select {
+		font-size: 15px;
+	}
+	.field_checkbox label {
+		font-size: 15px;
+		line-height: 24px;
+	}
+}
+/*
+===============================
+Get In Touch Css End
+===============================
+*/
 
 
 /*
@@ -1110,9 +1261,140 @@ Asked Question Css End
 Footer Css Start
 ============================
 */
+.site-footer {
+	padding-top: 43px;
+	padding-bottom: 32px;
+	background-color: var(--primary-color);
+}
 
-
-
+.footer-logo-wrap {
+	display: flex;
+	column-gap: 20px;
+	margin-bottom: 16px;
+  }
+  .footer-inline-wrap {
+	display: flex;
+	justify-content: space-between;
+	column-gap: 20px;
+	border-bottom: 0.5px solid #FFFFFF;
+	padding-bottom: 50px;
+}
+  .footer-content {
+	color: #FFFFFF99;
+	font-size: 18px;
+	line-height: 24px;
+	font-weight: 400;
+  }
+  .footer-socials a {
+	width: 37px;
+	height: 37px;
+	background-color: var(--white-color);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50%;
+  }
+  .footer-socials {
+	display: flex;
+	align-items: center;
+	column-gap: 23px;
+	margin-top: 40px;
+  }
+  .footer-box:first-child {
+	max-width: 410px;
+  }
+  .widget-title {
+	color: var(--white-color);
+	font-size: 24px;
+	font-weight: 600;
+	font-family: "Open Sans", sans-serif;
+	margin-bottom: 45px;
+	margin-top: 40px;
+  }
+  .footer-menu li a {
+	font-size: 18px;
+	font-weight: 600;
+	margin-bottom: 10px;
+	display: block;
+	color: #FFFFFFB2;
+  }
+  .footer-info {
+	max-width: 235px;
+}
+  .footer-info p, .footer-info a {
+	color: #fff;
+	font-size: 18px;
+	color: #FFFFFFB2;
+	display: block;
+  }
+  .copyright {
+	color: var(--white-color);
+	text-align: center;
+	font-size: 14px;
+	margin-top: 24px !important;
+  }
+  @media only screen and (max-width:991px) {
+	.footer-inline-wrap {
+		flex-flow: row wrap;
+	}
+	.footer-box:first-child {
+		max-width: 100%;
+	}
+	.footer-content {
+		font-size: 16px;
+	}
+	.widget-title {
+		font-size: 20px;
+		margin-bottom: 35px;
+	}
+	.footer-menu li a {
+		font-size: 16px;
+	}
+	.footer-info p, .footer-info a {
+		font-size: 16px;
+	}
+  }
+  @media only screen and (max-width:767px) {
+	.footer-logo-wrap img {
+		max-width: 120px;
+	}
+	.footer-inline-wrap {
+		flex-flow: row wrap;
+	}
+	.footer-box:first-child {
+		max-width: 100%;
+	}
+	.footer-box {
+		width: 100%;
+	}
+	.footer-content {
+		font-size: 15px;
+	}
+	.widget-title {
+		font-size: 16px;
+		margin-bottom: 18px;
+		margin-top: 30px;
+	}
+	.footer-menu li a {
+		font-size: 15px;
+	}
+	.footer-socials {
+		margin-top: 30px;
+	}
+	.footer-socials a {
+		width: 32px;
+		height: 32px;
+	}
+	.footer-socials a img {
+		width: 20px;
+	}
+	.footer-info p, .footer-info a {
+		font-size: 15px;
+	}
+	.footer-info {
+		max-width: 100%;
+	}
+  }
 /*
 ============================
 Footer Css End
