--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ Main Btn Css End
 	position: absolute;
 	right: 36px;
 	bottom: 36px;
+	z-index: 2;
 }
 /*
 ============================
@@ -529,8 +530,8 @@ Trackmaster Slides Css Start
 	font-size: 36px;
 	font-weight: 500;
 	line-height: 48px;
+	font-family: "Montserrat", sans-serif;
   }
-
 .trackmaster-slides-active .slick-dots {
 	position: absolute;
 	left: 50%;
@@ -1249,6 +1250,123 @@ Get In Touch Css Start
 Get In Touch Css End
 ===============================
 */
+
+/*
+===================================================================
+Our Solution Page Style Start
+======================================================================
+*/
+
+/*
+===============================
+Our Solution Css Start
+===============================
+*/
+.our-solution-section {
+	background-color: #0033CE0D;
+}
+.trackmaster-section {
+	position: relative;
+}
+
+.trackmaster-section .sec-brand-logo {
+	top: 50%;
+	transform: translateY(-50%);
+	bottom: initial;
+}
+@media only screen and (max-width:767px) {
+	.trackmaster-section .sec-brand-logo {
+		top: initial;
+		transform: translateY(-50%);
+		bottom: 0;
+	}
+}
+.solution-box-icon {
+	background-color: #E2EAFF;
+	padding: 30px;
+	border-radius: 12px;
+	min-height: 100%;
+}
+  .box-icon {
+	display: flex;
+	align-items: center;
+	column-gap: 50px;
+  }
+  .box-icon h3 {
+	font-size: 32px;
+	line-height: 48px;
+	font-weight: 600;
+	color: var(--black-color);
+  }
+  .solution-box-icon p {
+	color: #9A9A9A;
+	font-size: 18px;
+	line-height: 27px;
+	font-weight: 400;
+	margin-top: 30px;
+	max-width: 570px;
+}
+  @media only screen and (max-width:1199px) {
+	.box-icon {
+		column-gap: 28px;
+	}
+	.box-icon img {
+		max-width: 80px;
+	}
+	.box-icon h3 {
+		font-size: 30px;
+		line-height: 40px;
+	}
+  }
+  @media only screen and (max-width:991px) {
+	.box-icon {
+		display: block;
+	}
+	.box-icon h3 {
+		font-size: 24px;
+		line-height: 30px;
+		margin-top: 20px;
+	}
+	.solution-box-icon p {
+		font-size: 16px;
+		line-height: 26px;
+		margin-top: 25px;
+	}
+  }
+  @media only screen and (max-width:767px) {
+	.solution-box-two-column {
+		padding-bottom: 20px;
+	}
+	.solution-box-icon {
+		min-height: auto;
+		margin-bottom: 30px;
+	}
+	.box-icon {
+		display: block;
+	}
+	.box-icon h3 {
+		font-size: 20px;
+		line-height: 24px;
+		margin-top: 20px;
+	}
+	.solution-box-icon p {
+		font-size: 15px;
+		line-height: 24px;
+		margin-top: 20px;
+	}
+  }
+/*
+===============================
+Our Solution Css End
+===============================
+*/
+
+/*
+===================================================================
+Our Solution Page Style End
+======================================================================
+*/
+
 
 
 /*
