--- a/style.css
+++ b/style.css
@@ -690,6 +690,9 @@ Features Css Start
 		line-height: 35px;
 		margin-bottom: 10px;
 	}
+	.section-title h2 br {
+		display: none;
+	}
 	.section-title p {
 		font-size: 15px;
 		line-height: 22px;
@@ -1285,7 +1288,7 @@ Our Solution Css Start
 	background-color: #E2EAFF;
 	padding: 30px;
 	border-radius: 12px;
-	min-height: 100%;
+	min-height: 271px;
 }
   .box-icon {
 	display: flex;
@@ -1319,6 +1322,9 @@ Our Solution Css Start
 	}
   }
   @media only screen and (max-width:991px) {
+	.solution-box-icon {
+		min-height: auto;
+	}
 	.box-icon {
 		display: block;
 	}
@@ -1339,7 +1345,7 @@ Our Solution Css Start
 	}
 	.solution-box-icon {
 		min-height: auto;
-		margin-bottom: 30px;
+		margin-bottom: 25px;
 	}
 	.box-icon {
 		display: block;
@@ -1453,6 +1459,171 @@ Our Solution Css End
 /*
 ===================================================================
 Our Solution Page Style End
+======================================================================
+*/
+
+/*
+===================================================================
+Features page Style Start
+======================================================================
+*/
+.our-features-section {
+	background-color: #0011450D;
+}
+.our-features-section .section-title {
+	margin-bottom: 70px;
+}
+.feature-box-wrap {
+	background-color: var(--white-color);
+	padding: 44px 33px;
+	border: 1px solid #001145;
+	border-radius: 12px;
+	min-height: 409px;
+}
+  .feature-box-icon {
+	margin-bottom: 24px;
+  }
+  .feature-box-wrap h5 {
+	color: var(--black-color);
+	font-size: 24px;
+	font-weight: 600;
+  }
+  .feature-box-wrap p {
+	font-size: 18px;
+	line-height: 22px;
+	font-weight: 400;
+	font-family: "Montserrat", sans-serif;
+  }
+  @media only screen and (max-width:1199px) {
+	.feature-box-wrap {
+		padding: 35px 17px;
+	}
+	.feature-box-wrap h5 {
+		font-size: 22px;
+	}
+  }
+  @media only screen and (max-width:991px) {
+	.our-features-section .section-title {
+		margin-bottom: 50px;
+	}
+  }
+  @media only screen and (max-width:767px) {
+	.feature-box-wrap {
+		min-height: auto;
+	}
+	.feature-box-wrap h5 {
+		font-size: 20px;
+	}
+	.feature-box-wrap p {
+		font-size: 16px;
+	}
+  }
+/*
+===================================================================
+Features page Style End
+======================================================================
+*/
+
+
+/*
+===================================================================
+About page Style Start
+======================================================================
+*/
+.about-title p {
+	color: var(--primary-color);
+	font-size: 18px;
+	line-height: 27px;
+	font-weight: 400;
+	margin-top: 4px;
+  }
+  .about-contents-wrap {
+	margin-top: 56px;
+  }
+  .about-img img {
+	margin-bottom: 40px;
+	width: 100%;
+  }
+  .about-contents-wrap p {
+	color: var(--black-color);
+	font-size: 20px;
+	line-height: 36px;
+	text-align: left;
+	max-width: 1070px;
+	margin-left: auto;
+	margin-right: auto;
+  }
+  .about-two-box-wrap {
+	background-color: #E2EAFF;
+	padding: 24px;
+	border-radius: 12px;
+	position: relative;
+	overflow: hidden;
+}
+.about-icon-wrap h5 {
+	font-size: 30px;
+	font-weight: 600;
+	line-height: 48px;
+	padding-left: 115px;
+}
+  .about-two-box-wrap p {
+	font-size: 22px;
+	line-height: 34px;
+	margin-top: 56px;
+  }
+  .about-icon-wrap span {
+	width: 200px;
+	height: 200px;
+	background-color: var(--primary-color);
+	border-radius: 50%;
+	position: absolute;
+	left: -82px;
+	top: -81px;
+  }
+  .about-icon-wrap span img {
+	position: absolute;
+	right: 35px;
+	bottom: 35px;
+  }
+  @media only screen and (max-width:991px) {
+	.about-icon-wrap h5 {
+		font-size: 24px;
+	}
+	.about-two-box-wrap p {
+		font-size: 20px;
+	}
+  }
+  @media only screen and (max-width:767px) {
+	.about-contents-wrap {
+		margin-top: 40px;
+	}
+	.about-img img {
+		margin-bottom: 30px;
+	}
+	.about-contents-wrap p {
+		font-size: 16px;
+		line-height: 30px;
+		max-width: 100%;
+	}
+	.about-icon-wrap h5 {
+		font-size: 20px;
+		line-height: 32px;
+	}
+	.about-two-box-wrap p {
+		font-size: 16px;
+		line-height: 30px;
+	}
+	.about-icon-wrap span {
+		width: 180px;
+		height: 180px;
+	}
+	.about-icon-wrap span img {
+		width: 50px;
+	}
+  }
+/*
+===================================================================
+About page Style End
 ======================================================================
 */
 
