--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ Header Css Start
   .custom-select select {
 	  appearance: none;
 	  -webkit-appearance: none;
+	  outline: none;
 	  width: 100%;
 	  font-size: 16px;
 	  font-weight: 600;
